--- a/app/views/book/booking.erb
+++ b/app/views/book/booking.erb
@@ -14,7 +14,7 @@
        <div class="form-group">
         <label for="inputprofessor" class="col-lg-2 control-label">사용자</label>
         <div class="col-lg-10">
-          <input type="text" class="form-control" name="user" value="<%=current_user.email%>" disabled>
+          <input type="text" class="form-control" name="user" value="<%=current_user.student_name%>(<%=current_user.student_number%>)" disabled>
         </div>
       </div>
       
