--- a/app/views/freeboard/freeboards.erb
+++ b/app/views/freeboard/freeboards.erb
@@ -94,33 +94,33 @@
         <% if user_signed_in? %>
                  <% if current_user.email == 'admin@ptu.ac.kr' %> <br>
                     <a href="/freeboard/upload"><input type = "button"  class="btn btn-primary btn-sm" style="font-size: 18px;" id="menu_font" value = "작성하기"></input></a>
-                  <% else %>
-                    <br>
-                    <input class="btn btn-primary" type ="button" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "작성하기"></input>
+                  <!--% else %>-->
+                  <!--  <br>-->
+                  <!--  <input class="btn btn-primary" type ="button" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "작성하기"></input>-->
                                        
-                    <script type="text/javascript"> 
-                      $(function() {
-                          $("#writeadmin").click(function() {
-                              $("#dialog").dialog({
-                                  title: "알림",
+                  <!--  <script type="text/javascript"> -->
+                  <!--    $(function() {-->
+                  <!--        $("#writeadmin").click(function() {-->
+                  <!--            $("#dialog").dialog({-->
+                  <!--                title: "알림",-->
                               
-                                  width: 300,               //dialog
-                                  height: 200,
-                                  modal: true,
-                                  buttons: {
-                                      Close:
-                                      function() {
-                                          $("#dialog").dialog('close');
-                                      }
-                                  }
-                              });
-                          });
-                      })
-                  </script>
+                                  <!--width: 300,               //dialog-->
+                  <!--                height: 200,-->
+                  <!--                modal: true,-->
+                  <!--                buttons: {-->
+                  <!--                    Close:-->
+                  <!--                    function() {-->
+                  <!--                        $("#dialog").dialog('close');-->
+                  <!--                    }-->
+                  <!--                }-->
+                  <!--            });-->
+                  <!--        });-->
+                  <!--    })-->
+                  <!--</script>-->
                     
-                    <div id="dialog" title="Basic dialog" style="display :none">
-                         관리자가 아닙니다.
-                     </div>
+                    <!--<div id="dialog" title="Basic dialog" style="display :none">-->
+                    <!--     관리자가 아닙니다.-->
+                    <!-- </div>-->
                       
                   <% end %>
         <% else %>
