--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -3,9 +3,41 @@
   <br><center><a href="/book/booking/<%=@class.id%>&date=<%=@date%>" class="btn btn-warning">예약하기</a></center>
 </div>
 
+
 <div class="containter"> 
 <div class="row">
+<div class="col-md-12 col-md-offset-1">
+  <div class="well" >한눈에 보는 예약(시간순)
+    <div class="progress">
+      <% @class.reservations.where(date: @date).order(:start_time).each do |c| %>
+       <%@reservation_width=(c.finish_time-c.start_time)/450%>
+       <%@progress_color=["progress-bar progress-bar-success","progress-bar progress-bar-info","progress-bar progress-bar-warning","progress-bar progress-bar-danger"]%>
+        
+          <div id="reservation_progress" class="<%=@progress_color[c.id%4]%>" role="progressbar" aria-valuenow="<%=@reservation_width%>" aria-valuemin="0" aria-valuemax="100" style="width: <%=@reservation_width%>%">
+          <!--<span class="badge">%=c.start_time.to_time.hour%> : %=c.start_time.to_time.min%></span>-->
+          <%=User.find(c.user).student_name %> <a data-toggle="modal" href="#show<%=c.id%>"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a>
+          <!--<span class="badge">%=c.finish_time.to_time.hour%> : %=c.finish_time.to_time.min%></span></span>-->
+          </div>
+        
+      <%end%>
+      
+    </div>
 
+<!--<div class="progress" aria-valuemax="86400">-->
+<!--  <div class="progress-bar progress-bar-success" style="width: 3600">-->
+<!--    <span class="sr-only"><=%=c.finish_time-c.start_time%>% Complete (success)</span>-->
+<!--  </div>-->
+<!--  <div class="progress-bar progress-bar-warning progress-bar-striped" style="width: 20%">-->
+<!--    <span class="sr-only">20% Complete (warning)</span>-->
+<!--  </div>-->
+<!--  <div class="progress-bar progress-bar-danger" style="width: 10%">-->
+<!--    <span class="sr-only">10% Complete (danger)</span>-->
+<!--  </div>-->
+<!--</div>-->
+
+</div>
+
+</div>
 <div class="col-md-3 col-md-offset-1">
   <div class="panel panel-info">
     <div class="panel-heading">
@@ -13,16 +45,17 @@
     </div>
     <div class="panel-body">
       <center>
-      <div class="well">
+      <!--<div class="well">-->
         <form action="/book/view_booking" method="POST">
           <input type="date" name="show_date" required> 
           <input type="hidden" name="id" value="<%=@class.id%>"> 
           <button type="submit"class="btn btn-primary btn-sm">날짜 검색</button>
         </form>
-      </div>
+      <!--</div>-->
        </center>
     </div>
   </div>
+  
 </div>
   
  
@@ -131,7 +164,7 @@
   <table class="table table-striped table-hover ">
     <thead>
       <tr class="info">
-        
+        <th>#</th>
         <th>사용자 이름</th>
         <th>사용날짜</th>
         <th>사용시간</th>
@@ -143,60 +176,65 @@
     <tbody>
       <% @class.reservations.where(date: @date).order(:start_time).each do |c| %>
           <tr>
-           
-            <td><%=User.find(c.user).email %></td>
+            
+            <td><%=c.id%></td>
+            <td><%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)</td>
             <td><%=c.date%></td>
             <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
             
             <td>
               <% if current_user %> <!--로그인 된 상태.-->
-                      
+                <span class="label label-info" id="view_state<%c.id%>" value="<%=c.state%>"><%=c.state%></span>    <!--현재 진행상태 보여줌-->
+                
                 <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
-                  <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
                   
                   <% if c.state=="승인대기" %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()" >승인하기</button>
+                    <input onclick="change(<%=c.id%>)" type="button" value="승인하기" id="button<%=c.id%>"></input>
+                    <!--<button type="button" class="btn btn-primary btn-sm" id="button" onclick="change()" >승인하기</button>-->
+                    
                   <% else %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인취소</button>
-                  <input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>
+                    <input onclick="change(<%=c.id%>)" type="button" value="승인취소" id="button<%=c.id%>"></input>
+                    <!--<button type="button" class="btn btn-primary btn-sm" id="button<=c.id%>" onclick="change()">승인취소</button>-->
+                  <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
+                    
                   <%end%>
                                 
-                <% else %> <!--관리자가 아닐때 승인대기-->
-                  <span class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
-                  <input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
-                            
                 <% end %>
                                  
               <% end %> <!-- if current_user end -->
                     
 <script>
-   function change(){                             
-// $(function() {  
-                                	     
-  // $("#button%=c.id%>").click(function change(){                 
 
-    var view_state = document.getElementById("view_state<%=c.id%>");
-    var button = document.getElementById("button<%=c.id%>");
-    alert("view_state<%=c.id%>  ;  button<%=c.id%>"  );
-      <% if c.state == "승인대기" %> 
-      // 승인대기상태라면 버튼눌렀을때 승인완료로 바뀜
-        <% @state_change=Reservation.find(c.id)
-           @state_change.state="승인완료"
-           @state_change.save %> //db에 저장
-           
-           view_state.innerHTML="<%=c.state%>"; //상태표시를 바꿔줌
-           button.innerHTML="승인취소"; //버튼의값을 일시적으로 바꿔줌
-           
-      <% else %>//승인취소시
-        <% @state_change=Reservation.find(c.id)
-           @state_change.state="승인대기"
-           @state_change.save %> //db에 저장
-           
-           view_state.innerHTML="<%=c.state%>"; //상태표시를 바꿔줌
-           button.innerHTML="승인하기"; //버튼의값을 일시적으로 바꿔줌
-      <%end%>
-  // });
-};
+  function change(reservation_id){
+        var button="button" + reservation_id;
+        var view_state="view_state" + reservation_id;
+        
+        alert(button);
+        alert(view_state);
+        // // % @reservation %> = reservation_id
+        // alert(reservation_id)
+        // < @reservation = reservation_id %>
+        
+        if document.getElementById(view_state).value == "승인대기"//승인대기라면
+          //상태표시 바꾸고 버튼 텍스트도 바꿔줘야한다 db도!
+          document.getElementById(view_state).innerHTML="승인완료";
+          document.getElementById(button).value="승인취소";
+          
+          
+          // % @change_state=Reservation.find(reservation.id)
+          //   @change_state.state="승인완료"
+          //   @change_state.save %>
+             
+        else
+          document.getElementById(view_state).innerHTML="승인대기";
+          document.getElementById(button).value="승인하기";
+          
+          // % @change_state=Reservation.find(@reservation_id)
+          //   @change_state.state="승인대기"
+          //   @change_state.save %>
+        
+  };
+
 </script>
             </td>
                
