--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -219,35 +219,35 @@
 
     <!--공지사항-->
     <section class="mt150" id="notice_slidedown">
-     <br><br><br><br>
+      
+     <br><br><br><br><br><br><br><br>
         <div itemscope="" itemtype="http://schema.org/LocalBusiness" class="container">
           <div class="row">
             <div class="full">
-              <h1 class="text-center" id="menu_font" style="font-size:30px">공지사항
-              <a href = "/freeboard/freeboards" style = "color:black">
-                  <p class="glyphicon glyphicon-list-alt" aria-hidden="true" style="font-size:30px; top: 5px;"></p>
-              </a>
-                </h1><br><br>
+              
+              <h1 class="text-center" id="menu_font" style="font-size:30px"> <p class="glyphicon glyphicon-list-alt" aria-hidden="true" style = "font-size:30px"></p>&nbsp;공지사항</h1>
+              <br>
+                   <center>
+                   <div id = "menu_font">
+                   <a href = "/freeboard/freeboards" style = "font-size:24px; color:red">해당 글을 클릭하여 공지사항 게시판으로 이동해주세요!<br>
+                    예약 시스템 사용시에 공시사항은 꼭 필독해주시기 바랍니다. </a>
+                  </div>
+                  </center>
+              
             </div>
           </div>
-  
-          <div class="row" id="menu_font_t">
-            <div class="one-half">
-              <p><strong>여기다가는 전체 공지사항 게시판에서 최신글 몇개만 주르륵 불러와서 나오게 할거임.</strong></p>
-            </div>
-            <div class="one-half">
-              <p>In today's virtual marketplace, people are searching for your company. We exist to help your business find more customers online by using cutting edge SEO and digital marketing techniques. Call us at <strong><span itemprop="telephone">407-850-8895</span></strong> to get started.</p>
-              <p>In today's virtual marketplace, people are searching for your company. We exist to help your business find more customers online by using cutting edge SEO and digital marketing techniques. Call us at <strong><span itemprop="telephone">407-850-8895</span></strong> to get started.</p>
-              <p>In today's virtual marketplace, people are searching for your company. We exist to help your business find more customers online by using cutting edge SEO and digital marketing techniques. Call us at <strong><span itemprop="telephone">407-850-8895</span></strong> to get started.</p>
-              <p>In today's virtual marketplace, people are searching for your company. We exist to help your business find more customers online by using cutting edge SEO and digital marketing techniques. Call us at <strong><span itemprop="telephone">407-850-8895</span></strong> to get started.</p>
-              <p>In today's virtual marketplace, people are searching for your company. We exist to help your business find more customers online by using cutting edge SEO and digital marketing techniques. Call us at <strong><span itemprop="telephone">407-850-8895</span></strong> to get started.</p>
-              <p>In today's virtual marketplace, people are searching for your company. We exist to help your business find more customers online by using cutting edge SEO and digital marketing techniques. Call us at <strong><span itemprop="telephone">407-850-8895</span></strong> to get started.</p>
-              <p>In today's virtual marketplace, people are searching for your company. We exist to help your business find more customers online by using cutting edge SEO and digital marketing techniques. Call us at <strong><span itemprop="telephone">407-850-8895</span></strong> to get started.</p>
-              <p>In today's virtual marketplace, people are searching for your company. We exist to help your business find more customers online by using cutting edge SEO and digital marketing techniques. Call us at <strong><span itemprop="telephone">407-850-8895</span></strong> to get started.</p>
-            </div>
-          </div>
-        </div><br><br><br><br>
-      </section>
+      
+        <!--      <div class="row" id="menu_font_t">-->
+        <!--        <div class="one-half">-->
+        <!--          <p><strong>최신글</strong></p>-->
+        <!--        </div>-->
+        <!--        <div class="one-half">-->
+        <!--          <p>sodydydfeifjios</p>-->
+        <!--        </div>-->
+        <!--      </div>-->
+        <!--    </div><br><br><br><br>-->
+        <!--  </section>-->
+      <br><br>
 
   <!--이용방법-->
   <div class = "how" id ="howtouse">
@@ -257,7 +257,7 @@
       	<div class="other-focuses">
 		      <div class="section-footer-title" id="menu_font" style = "text-align:center"> How To Use</div>
 	      </div>
-  </div>
+   
     <div class="content-section-a">
         <div class="container" >
             <div class="row">
@@ -326,10 +326,11 @@
             </div>
         </div>
     </div>
+  </div>  
     
    <!--R.eservation S.ystem Bar-->
    <br><br><br><br><br><br>
-    <div class="jumbotron_down" style="background-image: url(http://my-zone-park-ji-yeon.c9.io/img/one_white.jpg); background-size: cover; height:500px;" >
+    <div class="jumbotron_down" style="background-image: url(http://branch-hs-umhyesun.c9.io/img/one_white.jpg); background-size: cover; height:500px;" >
       <br><br><br><br><br><br><br><br>
       <p style = "color:black; text-align: center; font-size:100px; margin-bottom: 0px;">Reservation System</p>
       <p style = "color:black; text-align: center; font-size:25px">Pyeongtaek University<p>
