--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -1,29 +1,32 @@
-<div class="well">
-  <center><strong><%=@date.to_date.year%>년 <%=@date.to_date.month%>월 <%=@date.to_date.day%>일의 <%=@class.building_name%> '<%=@class.room_number%>호'</strong>에 대한 예약현황입니다.</center>
-  <br><center><a href="/book/booking/<%=@class.id%>&date=<%=@date%>" class="btn btn-warning">예약하기</a></center>
+<div class="well" id="menu_font" style="font-size: 20px;" >
+  <center><%=@date.to_date.year%>년 <%=@date.to_date.month%>월 <%=@date.to_date.day%>일<br><%=@class.building_name%> '<%=@class.room_number%>호'에 대한 예약현황입니다.
+  <br><a href="/book/booking/<%=@class.id%>&date=<%=@date%>" class="btn btn-warning" id="menu_font" style="font-size: 20px;">예약하기</a></center>
 </div>
+<br>
 
 <div class="containter"> 
 <div class="row">
 
 <div class="col-md-3 col-md-offset-1">
-  <div class="panel panel-info">
-    <div class="panel-heading">
-      <h3 class="panel-title"><center>예약 현황을 볼 날짜를 선택해라</center></h3>
-    </div>
-    <div class="panel-body">
-      <center>
-      <div class="well">
-        <form action="/book/view_booking" method="POST">
-          <input type="date" name="show_date" required> 
-          <input type="hidden" name="id" value="<%=@class.id%>"> 
-          <button type="submit"class="btn btn-primary btn-sm">날짜 검색</button>
-        </form>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <div class="panel-title" style="text-align: center; font-size: 20px;" id="menu_font"><center>예약 현황을 볼 날짜를 선택해라</center></div>
       </div>
-       </center>
+      <div class="panel-body">
+        <center>
+        <div class="well">
+          <form action="/book/view_booking" method="POST">
+            <input type="date" name="show_date" style="text-align: center; font-size: 20px;" id="menu_font" required> 
+            <input type="hidden" name="id" style="text-align: center; font-size: 18px;" id="menu_font" value="<%=@class.id%>"> 
+            <button type="submit"class="btn btn-primary btn-sm" style="text-align: center; font-size: 18px;" id="menu_font">날짜 검색</button>
+          </form>
+        </div>
+         </center>
+      </div>
+       
     </div>
   </div>
-</div>
+
   
  
 <!--  <div class="panel panel-info">-->
@@ -130,11 +133,11 @@
 <div class="col-md-7 col-md-offset-0">
   <table class="table table-striped table-hover ">
     <thead>
-      <tr class="info">
+      <tr class="info" style="text-align: center; font-size: 20px;" id="menu_font_t">
         
         <th>사용자 이름</th>
-        <th>사용날짜</th>
-        <th>사용시간</th>
+        <!--<th>사용날짜</th>-->
+        <th>사용날짜 및 시간</th>
         <th></th>
         <th></th>
         <th></th>
@@ -144,34 +147,33 @@
       <% @class.reservations.where(date: @date).order(:start_time).each do |c| %>
           <tr>
            
-            <td><%=User.find(c.user).email %></td>
-            <td><%=c.date%></td>
-            <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
-            <%=c.id%>
-            
-            <td>
+            <td style="font-size: 18px;" id="menu_font"><%=User.find(c.user).email %></td>
+           <!--<td><%#=c.date%></td>-->
+            <td style="font-size: 18px;" id="menu_font"><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
+
+            <td style="font-size: 18px;" id="menu_font">
               <% if current_user %> <!--로그인 된 상태.-->
-                      
-                <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
-                  <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
-                  
-                  <% if c.state=="승인대기" %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인하기</button>
-                    
-                  <% else %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인취소</button>
-                    
-                  <input type="hidden" class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>">
-               
-                  <% end %>
-                                
-                <% else %> <!--관리자가 아닐때 승인대기-->
-                  <span class="label label-info"><%=c.state%></span> <!--관리자가 아닐땐 상태만 보여준다-->
-                  <input type="hidden" value="승인대기" id="<=c.id%>">
-                            
-                <% end %>
-                                 
-              <% end %> <!-- if current_user end -->
+                        
+                      <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
+                        <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
+                        
+                            <% if c.state=="승인대기" %>
+                              <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()" 
+                              style="text-align: center; font-size: 16px;" id="menu_font">승인하기</button>
+                            <% else %>
+                              <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()"
+                              style="text-align: center; font-size: 16px;" id="menu_font">승인취소</button>
+                              <input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"
+                              style="text-align: center; font-size: 16px;" id="menu_font"></input>
+                            <%end%>
+                                      
+                      <% else %> <!--관리자가 아닐때 승인대기-->
+                        <span class="label label-info" style="text-align: center; font-size: 16px;" id="menu_font"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
+                        <input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
+                                  
+                      <% end %>
+                                   
+               <% end %> <!-- if current_user end -->
                     
 <script>
    function change(){                             
@@ -204,18 +206,20 @@
 </script>
             </td>
                
-            <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
+            <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>"
+            style="text-align: center; font-size: 16px;" id="menu_font">상세보기</button></td>
             
             <td>
             <% if current_user %>
-               <% if User.find(c.user).email == current_user.email %>
-                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
-               <% else %>
-                 
-               <%end%>
-            <% else %>
-            
-            <% end %>
+                       <% if User.find(c.user).email == current_user.email %>
+                        <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" 
+                        style="text-align: center; font-size: 16px;" id="menu_font">예약취소</button>
+                       <% else %>
+                         
+                       <%end%>
+                <% else %>
+                
+                <% end %>
             </td>
           </tr>
 
@@ -295,7 +299,10 @@
     </div>
   </div>
 </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <%end%>
 
 
 </div>
+
+
