--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,10 @@
 <center>
 
-<h2>비밀번호를 잊어버리셨나요?</h2>
+  <br>
+  <h2 id = "menu_font">  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+  &nbsp; 비밀번호를 잊어버리셨나요?</h2> <br>
+  <h4 id = "menu_font_t"> (비밀번호를 받을 email을 적어주세요.) </h4>
+  <br><br>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -8,12 +12,16 @@
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
-  </div>
+  </div> 
+  </br>
 
   <div class="actions">
-    <%= f.submit "새로운 비밀번호 설정을 위한 메일을 설정해주세요." %>
+    <%= f.submit "확인" %>
   </div>
 <% end %>
+
+<br>
+<br>
 
 <%= render "devise/shared/links" %>
 
