--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,33 +1,43 @@
+<br><br>
 <center>
-<h2>회원정보 수정 </h2>
+<h2 id = "menu_font">  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+&nbsp;회원정보 수정 </h2>
 <!--<2%= resource_name.to_s.humanize %>-->
+
+<br><br>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="field" id = "menu_font">
     <%= f.label :email,"이메일" %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
+  
+  <br><br>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password,"수정할 비밀번호" %> <i>(leave blank if you don't want to change it)</i><br />
+  <div class="field" id = "menu_font">
+    <%= f.label :password, "변경할 비밀번호" %> <br><div id = "menu_font_t">(변경을 원하시지 않는다면 빈칸으로 비워두세요.)</div><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
+  <br><br>
 
-  <div class="field">
+  <div class="field" id = "menu_font">
     <%= f.label :password_confirmation,"비밀번호 확인" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password," 현재 비밀번호" %> <i>(we need your current password to confirm your changes)</i><br />
+  <div class="field" id = "menu_font">
+    <%= f.label :current_password," 현재 비밀번호" %> <br>
+    <div id = "menu_font_t">(회원정보 수정을 위해 비밀번호를 입력해 주세요.)</div><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
+  
+  <br><br>
 
   <div class="actions">
     <%= f.submit "수정" %>
@@ -36,7 +46,9 @@
 
 <!--<h3>회원탈퇴</h3>-->
 
-<p><%= button_to "회원탈퇴", registration_path(resource_name), data: { confirm: "탈퇴하시겠습니까?" }, method: :delete %></p>
+<!--<p><#%= button_to "회원탈퇴", registration_path(resource_name), data: { confirm: "탈퇴하시겠습니까?" }, method: :delete %></p>-->
 
-<%= link_to "Back", :back %>
+<!--<%#= link_to "Back", :back %>-->
 </center>
+
+<br><br><br><br><br><br> 
