--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,36 @@
 <center>
-<h2>회원가입</h2>
-<br>
+
+<h2 id = "menu_font">  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+&nbsp;회원가입</h2> 
+<br><br>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-  <div class="field">
+  <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :student_number, "학번" %><br />
     <%= f.text_field :student_number, autofocus: true %>
   </div>
  
   <br>
-  <div class="field">
+  <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :student_name,"이름" %><br />
     <%= f.text_field :student_name, autofocus: true %>
   </div>
   <br>
   
-  <div class="field">
+  <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :department,"학과" %><br />
     <!--<2%= f.text_field :department, autofocus: true %>-->
     <%= f.select :department, options_for_select(%w[정통 Albania Algeria...]) %>
   </div>
   <br>
   
-  <div class="field">
+  <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :email,"이메일" %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 <br>
-  <div class="field">
+  <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :password,"비밀번호" %>
     <% if @minimum_password_length %>
     <em>(최소 <%= @minimum_password_length %> 자리 이상)</em>
@@ -35,16 +38,20 @@
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 <br>
-  <div class="field">
+  <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :password_confirmation,"비밀번호 확인" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 <br>
-  <div class="actions">
+  <div class="actions" id = "menu_font_t" style = "font-size:20px">
     <%= f.submit "회원가입" %>
   </div>
+  <br><br>
+  
 <% end %>
 
 
 <%= render "devise/shared/links" %>
 </center>
+
+<br><br>
