--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -195,7 +195,7 @@
                     
                   <% else %>
                     <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button>
+                    <button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button>
                   <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
                     
                   <%end%>
