--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,7 @@
   
   <!--마지막 copyright 부분-->
   
-  <footer>
+  <footer style="padding-top:300px">
     <center>      
       <div style="background-color:#0C5838;">
       <br><br><br>
