--- a/app/views/book/admin_menu.erb
+++ b/app/views/book/admin_menu.erb
@@ -1,3 +1,57 @@
+<script type="text/javascript">
+  
+  function change(reservation_id){
+        
+        var button="button" + reservation_id;
+        var view_state="view_state" + reservation_id;
+        var re_state=document.getElementById(view_state).innerHTML;
+        
+        if (re_state == "승인대기")//승인대기라면
+          //상태표시 바꾸고 버튼 텍스트도 바꿔줘야한다 db도!
+          $.ajax({
+            data: {
+              reservation_num: reservation_id,
+              state: "승인완료"
+            },
+            url: "/book/update_state",
+            success: function(){
+              // alert("db 저장 완료");
+              document.getElementById(view_state).innerHTML="승인완료";
+              document.getElementById(button).innerHTML="승인취소";
+              document.getElementById(button).className='btn btn-danger btn-sm';
+              document.getElementById(view_state).className='label label-primary';
+              // document.getElementById(button).setAttribute("class", "btn btn-success btn-sm");
+            },
+            error:function(request,status,error){
+            alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+            }
+          });
+          //db 바꿔줌
+        
+        else
+          $.ajax({
+            data: {
+              reservation_num: reservation_id,
+              state: "승인대기"
+            },
+            url: "/book/update_state",
+            success: function(){
+              // alert("db 저장 완료");
+              document.getElementById(view_state).innerHTML="승인대기";
+              document.getElementById(button).innerHTML="승인하기";
+              document.getElementById(button).className='btn btn-success btn-sm';
+              document.getElementById(view_state).className='label label-info';
+            },
+            error:function(request,status,error){
+            alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+            }
+          });
+          
+          
+  };
+
+</script>
+
 <div class="well">
   관리자 관리 페이지 입니다. 
 </div>
@@ -9,7 +63,7 @@
   <table class="table table-striped table-hover ">
     <thead>
       <tr class="info">
-        
+        <th>#</th>
         <th>사용자 이름</th>
         <th>사용날짜</th>
         <th>사용시간</th>
@@ -19,51 +73,65 @@
       </tr>
     </thead>
     <tbody>
-        <center>시간별 예약 리스트
-      <% Reservation.all.each do |c| %>
+      <% Reservation.order(:start_time).each do |c| %>
           <tr>
-           
-            <td><%=User.find(c.user).email %></td>
+            
+            <td><%=c.id%></td>
+            <td><%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)</td>
             <td><%=c.date%></td>
             <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
+            <!--<td><span class="label label-info" id="view_state%=c.id%>" value="%=c.state%>">%=c.state%></span>    <!--현재 진행상태 보여줌->/td>-->
             
-            <td>
+            <!--<td>-->
               <% if current_user %> <!--로그인 된 상태.-->
-                      
+                
                 <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
-                  <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
                   
                   <% if c.state=="승인대기" %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()" >승인하기</button>
+                    <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
+                    <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
+                    <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                    
+                    
                   <% else %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인취소</button>
+                    <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
+                    <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
+                    <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                  <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
+                    
                   <%end%>
                                 
-                <% else %> <!--관리자가 아닐때 승인대기-->
-                  <span class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
-                  <input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
-                            
                 <% end %>
                                  
               <% end %> <!-- if current_user end -->
                     
 
-            </td>
+            <!--</td>-->
                
             <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
             
-           
+            <td>
+            <% if current_user %>
+               <% if User.find(c.user).email == current_user.email %>
+                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
+               <% else %>
+                 
+               <%end%>
+            <% else %>
+            
+            <% end %>
+            </td>
           </tr>
 
       <% end %>
     </tbody>
   </table> 
-  
+  <!--시간별로 보여주는거 끝-->
   
   <table class="table table-striped table-hover ">
     <thead>
       <tr class="info">
-        
+        <th>#</th>
         <th>사용자 이름</th>
         <th>사용날짜</th>
         <th>사용시간</th>
@@ -76,37 +144,52 @@
         <center>승인대기 예약 리스트
       <% Reservation.where(state: "승인대기").each do |c| %>
           <tr>
-           
-            <td><%=User.find(c.user).email %></td>
+            
+            <td><%=c.id%></td>
+            <td><%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)</td>
             <td><%=c.date%></td>
             <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
+            <!--<td><span class="label label-info" id="view_state%=c.id%>" value="%=c.state%>">%=c.state%></span>    <!--현재 진행상태 보여줌->/td>-->
             
-            <td>
+            <!--<td>-->
               <% if current_user %> <!--로그인 된 상태.-->
-                      
+                
                 <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
-                  <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
                   
                   <% if c.state=="승인대기" %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()" >승인하기</button>
+                    <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
+                    <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
+                    <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                    
+                    
                   <% else %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인취소</button>
+                    <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
+                    <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
+                    <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                  <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
+                    
                   <%end%>
                                 
-                <% else %> <!--관리자가 아닐때 승인대기-->
-                  <span class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
-                  <input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
-                            
                 <% end %>
                                  
               <% end %> <!-- if current_user end -->
                     
 
-            </td>
+            <!--</td>-->
                
             <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
             
-           
+            <td>
+            <% if current_user %>
+               <% if User.find(c.user).email == current_user.email %>
+                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
+               <% else %>
+                 
+               <%end%>
+            <% else %>
+            
+            <% end %>
+            </td>
           </tr>
 
       <% end %>
@@ -116,7 +199,7 @@
   <table class="table table-striped table-hover ">
     <thead>
       <tr class="info">
-        
+        <th>#</th>
         <th>사용자 이름</th>
         <th>사용날짜</th>
         <th>사용시간</th>
@@ -126,52 +209,65 @@
       </tr>
     </thead>
     <tbody>
-        <center>승인완료 예약 리스트
+        <center>승인대기 예약 리스트
       <% Reservation.where(state: "승인완료").each do |c| %>
           <tr>
-           
-            <td><%=User.find(c.user).email %></td>
+            
+            <td><%=c.id%></td>
+            <td><%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)</td>
             <td><%=c.date%></td>
             <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
+            <!--<td><span class="label label-info" id="view_state%=c.id%>" value="%=c.state%>">%=c.state%></span>    <!--현재 진행상태 보여줌->/td>-->
             
-            <td>
+            <!--<td>-->
               <% if current_user %> <!--로그인 된 상태.-->
-                <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span><!--현재 진행상태 보여쥼
                 
                 <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
                   
                   <% if c.state=="승인대기" %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()" >승인하기</button>
+                    <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
+                    <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
+                    <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                    
+                    
                   <% else %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인취소</button>
+                    <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
+                    <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
+                    <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                  <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
+                    
                   <%end%>
                                 
-                <% else %> <!--관리자가 아닐때 승인대기-->
-                  <span class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
-                  <input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
-                            
                 <% end %>
                                  
               <% end %> <!-- if current_user end -->
                     
 
-            </td>
+            <!--</td>-->
                
             <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
             
-           
+            <td>
+            <% if current_user %>
+               <% if User.find(c.user).email == current_user.email %>
+                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
+               <% else %>
+                 
+               <%end%>
+            <% else %>
+            
+            <% end %>
+            </td>
           </tr>
 
       <% end %>
     </tbody>
   </table> 
-</div>
-</div> <!--row의 div-->
-
-<table class="table table-striped table-hover ">
+  
+  <table class="table table-striped table-hover ">
     <thead>
       <tr class="info">
-        
+        <th>#</th>
         <th>사용자 이름</th>
         <th>사용날짜</th>
         <th>사용시간</th>
@@ -184,42 +280,61 @@
         <center>오늘의 오후 6시 이후 예약 목록
       <% Reservation.where(date: Time.zone.today).where("start_time >= ? ", "18:00".to_time).each do |c| %>
           <tr>
-           
-            <td><%=User.find(c.user).email %></td>
+            
+            <td><%=c.id%></td>
+            <td><%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)</td>
             <td><%=c.date%></td>
             <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
+            <!--<td><span class="label label-info" id="view_state%=c.id%>" value="%=c.state%>">%=c.state%></span>    <!--현재 진행상태 보여줌->/td>-->
             
-            <td>
+            <!--<td>-->
               <% if current_user %> <!--로그인 된 상태.-->
-                      
+                
                 <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
-                  <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
                   
                   <% if c.state=="승인대기" %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()" >승인하기</button>
+                    <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
+                    <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
+                    <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                    
+                    
                   <% else %>
-                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인취소</button>
+                    <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
+                    <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
+                    <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                  <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
+                    
                   <%end%>
                                 
-                <% else %> <!--관리자가 아닐때 승인대기-->
-                  <span class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
-                  <input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
-                            
                 <% end %>
                                  
               <% end %> <!-- if current_user end -->
                     
 
-            </td>
+            <!--</td>-->
                
             <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
             
-           
+            <td>
+            <% if current_user %>
+               <% if User.find(c.user).email == current_user.email %>
+                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
+               <% else %>
+                 
+               <%end%>
+            <% else %>
+            
+            <% end %>
+            </td>
           </tr>
 
       <% end %>
     </tbody>
   </table> 
+
+</div>
+</div> <!--row의 div-->
+
 
 
 
