--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         <div class = "col-md-6">
                 <ul class="nav navbar-nav" id="menu_font" style="padding-left:70px">
                       <li>
-                          <a href="/"><img src="http://notice-chohyejin.c9.io/img/ptu.png" /></a>
+                          <a href="/"><img src="http://foto-chohyejin.c9.io/img/ptu.png" /></a>
                       </li>
                       <li class="page-scroll">
                         <% if current_page?(controller: 'book', action: 'real_main') %>        
@@ -129,7 +129,6 @@
     </div>
   </div> <!-- 상단 고정 메누바 끝 -->
   
-  
       <%= yield %>
   
   
@@ -142,7 +141,10 @@
         <p style = "color: white; font-size:19px;">Copyright © Company Tip+_one 2015, All Rights Reserved.<br></p>
         <p style="color: white; font-size:17px;">E-mail : um135@naver.com<br>
                                                  Pyeongtaek University URL : link( <a href = "www.ptu.ac.kr" style="color:white">www.ptu.ac.kr</a> )
-      <br><br><br><br></p>  
+      <br> 
+      Made by <a href = "/book/tip" style = "color:white">Tip+_one</a>
+      </p>
+      <br><br>
       </div>
     </center>
   </footer>
