--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,28 +1,46 @@
+<div class="well" id="menu_font" style="font-size: 20px;" >
+   <center>회원가입 시 입력하신 이메일로 비밀번호를 보내드립니다.<br>
+   </center>
+</div>
+<br>
+
 <center>
-
-  <br>
-  <h2 id = "menu_font">  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-  &nbsp; 비밀번호를 잊어버리셨나요?</h2> <br>
-  <h4 id = "menu_font_t"> (비밀번호를 받을 email을 적어주세요.) </h4>
+  <div id = "menu_font" style="font-size: 30px;">
+    <span class="glyphicon glyphicon-pencil" aria-hidden="true" style="color:red"></span>
+    &nbsp; 비밀번호를 잊어버리셨나요?
+  </div>
   <br><br>
-
+  
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div> 
+  <div id = "menu_font_t" style = "font-size:20px">
+    <div class="field">
+      <%= f.label :email %><br />
+      (비밀번호를 받을 email을 적어주세요.)<br><br>
+      <%= f.email_field :email, autofocus: true %>
+    </div> 
+  </div>
   </br>
 
-  <div class="actions">
-    <%= f.submit "확인" %>
+  <div class="actions" id = "menu_font" style = "font-size:25px">
+    <input type="submit" name="commit" value="전송하기" style="height: 40px; width: 300px; background-color: #FFFFFF;">
+    <%#= f.submit "확인" %>
   </div>
 <% end %>
 
 <br>
 <br>
 
-<%= render "devise/shared/links" %>
+<%#= render "devise/shared/links" %>
+<div id="menu_font" style="font-size: 20px;margin-top: 10px;">
+  <%- if controller_name != 'sessions' %>
+   <%= link_to "로그인", new_session_path(resource_name) %>&nbsp;&nbsp;
+  <% end -%>
+
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+   <%= link_to "회원가입", new_registration_path(resource_name) %><br /><br><br>
+<% end -%>
+</div>
 
 </center>
