--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,19 @@
-<center>
+<div class="well" id="menu_font" style="font-size: 20px;" >
+   <center>회원가입 페이지입니다.<br>
+   이름은 실명을 사용해주시고 학과나 학번을 올바르게 기입해주시기 바랍니다.<br>
+   (잘못 입력하신 사항은 '회원정보 수정' 메뉴에서 수정이 가능합니다.)</center>
+</div>
+<br>
 
-<h2 id = "menu_font">  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-&nbsp;회원가입</h2> 
+<center>
+<div id = "menu_font" style="font-size: 30px;">
+  <span class="glyphicon glyphicon-pencil" style="color:red" aria-hidden="true"></span>&nbsp;회원가입
+</div> 
 <br><br>
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-  <div class="field" id = "menu_font_t" style = "font-size:20px">
-    <%= f.label :student_number, "학번" %><br />
-    <%= f.text_field :student_number, autofocus: true %>
-  </div>
- 
-  <br>
   <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :student_name,"이름" %><br />
     <%= f.text_field :student_name, autofocus: true %>
@@ -26,32 +28,39 @@
   <br>
   
   <div class="field" id = "menu_font_t" style = "font-size:20px">
-    <%= f.label :email,"이메일" %><br />
+    <%= f.label :student_number, "학번" %><br />
+    <%= f.text_field :student_number, autofocus: true %>
+  </div>
+  <br>
+  
+  <div class="field" id = "menu_font_t" style = "font-size:20px">
+    <%= f.label :email,"이메일" %><br>
     <%= f.email_field :email, autofocus: true %>
   </div>
-<br>
+  <br>
+  
   <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :password,"비밀번호" %>
+    <span style="font-size:16px">
     <% if @minimum_password_length %>
-    <em>(최소 <%= @minimum_password_length %> 자리 이상)</em>
+    (최소 <%= @minimum_password_length %> 자리 이상)
+    </span>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
-<br>
+  <br>
+
   <div class="field" id = "menu_font_t" style = "font-size:20px">
     <%= f.label :password_confirmation,"비밀번호 확인" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-<br>
-  <div class="actions" id = "menu_font_t" style = "font-size:20px">
-    <%= f.submit "회원가입" %>
-  </div>
   <br><br>
   
+  <div class="actions" id = "menu_font" style = "font-size:25px">
+    <input type="submit" name="commit" value="회원가입" style="height: 40px; width: 300px; background-color: #FFFFFF;">
+    <%#= f.submit "회원가입" %>
+  </div>
 <% end %>
 
-
-<%= render "devise/shared/links" %>
+<%= render "devise/shared/links" %><br>
 </center>
-
-<br><br>
