--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         <div class = "col-md-6">
                 <ul class="nav navbar-nav" id="menu_font" style="padding-left:70px">
                       <li>
-                          <a href="/"><img src="http://foto-chohyejin.c9.io/img/ptu.png" /></a>
+                          <a href="/"><img src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xpf1/v/t1.0-9/12042967_844909862291712_7048667495249600641_n.jpg?oh=371f6f0014cd5c42bc10e1a60ce5d0b6&oe=565F7C09&__gda__=1453379427_226d49d179d2932dc1e144b87435172e" /></a>
                       </li>
                       <li class="page-scroll">
                         <% if current_page?(controller: 'book', action: 'real_main') %>        
@@ -134,7 +134,7 @@
   
   <!--마지막 copyright 부분-->
   
-  <footer style="padding-top:300px">
+  <footer>
     <center>      
       <div style="background-color:#0C5838;">
       <br><br><br>
