--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -38,8 +38,9 @@
   });
   </script>
 
+
      <div class="jumbotron" id="top" style="background-image: url(https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/11947483_833544056761626_6388524221709896910_n.jpg?oh=df1434c4094e5f37d1222391567bd482&oe=56807E0E&__gda__=1446490038_9fe83b67f9ad1e62d26e55431b0817a2); background-size: cover; height:530px;">
-      <div class="container">
+       <div class="container">
         <div class="row">
           <div class="col-md-6" ><br><br>
             <div id="main_font" style="margin-left: 5px; margin-top: 45px;">My Zone</div><br>
@@ -54,7 +55,7 @@
             <!--오늘의 예약건수-->
             <br><br><br><br>
             
-            <div id="menu_font" style="margin-left: 175px; padding-top: 20px;padding-left: 10px" >
+            <!--<div id="menu_font" style="margin-left: 175px; padding-top: 20px;padding-left: 10px" >-->
              
              
               <!--아코디언-->
@@ -141,25 +142,29 @@
             
           <%else%> 
             
-              <div id="navbar" class="navbar-collapse collapse"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+              <div id="navbar" class="navbar-collapse collapse"><br><br><br><br><br><br><br><br><br><br><br><br><br>
                   
                  <!-- devise 로그인창 -->
                   <form class="new_user" id="new_user" action="/users/sign_in" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="kRl81tHWKzxcUUvagXUXiCSvVvipE2p5muJR0dP9Gy600BAvnC8R8rOq47T/9CQrCJ47i7Bl/YjQImveK4Q2EQ==">
-                
-                      <label for="user_email" style="text-align:right; font-size:20px; color:white" id="menu_font_t">Email</label>
-                      <input autofocus="autofocus" type="email" value="" name="user[email]" id="user_email">
-                    
-                      <label for="user_password" style="text-align:right; font-size:20px; color:white;" id="menu_font_t">&nbsp;&nbsp;Password</label>
-                      <input autocomplete="off" type="password" name="user[password]" id="user_password">
-                  
-                      <div class="#" class="action">
+                      
+                      <label for="user_email" style="font-size: 22px; color:white" id="menu_font_t">Email&nbsp;</label>
+                      <div style="font-size: 20px;" id="menu_font">
+                      <input autofocus="autofocus" type="email" style="height: 30px; width:205px;" value="" name="user[email]" id="user_email">
+                      </div>
+                      
+                      <label for="user_password" style="font-size: 22px; color:white" id="menu_font_t">&nbsp;&nbsp;Password</label>
+                      <div style="font-size: 20px; color:black;">
+                      <input autocomplete="off" type="password"  style="height: 30px; width:205px;" name="user[password]" id="user_password">
+                      </div>
+                      
+                      <div class="#" class="action" style="margin-top: 8px;">
                         <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
-                        <label for="user_remember_me" style="text-align:right; font-size:15px; color:white;" id="menu_font_t">Remember me</label> &nbsp;     
-                        <input type="submit" name="commit" id="menu_font_t" value="Log in">
+                        <label for="user_remember_me" style="text-align:right; font-size:18px; color:white;" id="menu_font_t">Remember me</label> &nbsp;     
+                        <input type="submit" name="commit" id="menu_font" style="height: 30px; background-color: #FFFFFF; font-size: 15px;" value="로그인">
                       </div>
                   </form>
                   
-                  <a href="/users/password/new" style="text-align:right; font-size:15px; color:white;" id="menu_font_t">Forgot your password?</a><br>
+                  <!--<a href="/users/password/new" style="text-align:right; font-size:18px; color:white;" id="menu_font_t">비밀번호를 잊으셨나요?</a><br>-->
                   <!--여기까지-->
   
               </div>
@@ -167,9 +172,9 @@
           <%end%> 
 
         </div>
-      </div><br><br><br>
-    </div>
-    </div>
+      </div>
+      <br><br><br>
+    
       <!--페이지 내리는거(손가락)-->
       <center>
       <br><br><br><br><br><br> 
@@ -340,7 +345,7 @@
     
    <!--R.eservation S.ystem Bar-->
    <br><br><br><br><br><br>
-    <div class="jumbotron_down" style="background-image: url(http://branch-hs-umhyesun.c9.io/img/one_white.jpg); background-size: cover; height:500px;" >
+    <div class="jumbotron_down" style="background-image: url(https://scontent.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/12039257_844909875625044_5934146598989575588_n.jpg?oh=60d4ebae3a73e09e7bf9b56b1b497c3a&oe=569D22A6); background-size: cover; height:500px;" >
       <br><br><br><br><br><br><br><br>
       <p style = "color:black; text-align: center; font-size:120px;" id="menu_font">Reservation System</p>
       <p style = "color:black; text-align: center; font-size:35px" id="menu_font">Pyeongtaek University<p>
@@ -400,6 +405,8 @@
       <br> <br>
       
 </div>
+</div>
+
       
 
 
