--- a/app/views/message/write.erb
+++ b/app/views/message/write.erb
@@ -21,12 +21,9 @@
       <div class="form-group">
         <label for="select" class="col-lg-2 control-label" style="font-size: 20px;" id="menu_font">받는사람</label>
         <div class="col-lg-10">
-          <select class="form-control" id="select" name="receiver" style="font-size: 18px; height: 39px;"  id="menu_font_t" required>
-              <% User.all.each do |u| %>
-                <option><%=u.student_name%> (<%=u.student_number%>)</option>
-                <input type="hidden" name="receiver_id" value="<%=u.id%>">
-              <%end%>
-          </select>
+          <input type="text" class="form-control"style="font-size: 18px;" id="menu_font_t" value="관리자" disabled>
+          <input type="text" name="receiver" value="<%=User.where(email: "admin@ptu.ac.kr")%>">
+          
           <br>
         </div>
       </div>
