--- a/app/views/message/main.erb
+++ b/app/views/message/main.erb
@@ -66,7 +66,7 @@
           <% @send_message.reverse.each do |m|%> <!--유저 디비를 생성하면 유저별로 메시지 출력해야되니까 user.messages.each do 하고 걸러줄것-->
           <tr>
             <td style="font-size: 18px;" id="menu_font_t"><%=m.id%></td>
-            <td style="font-size: 18px;" id="menu_font_t"><%=m.receiver%></td>
+            <td style="font-size: 18px;" id="menu_font_t"><%=User.find(m.receiver)%></td>
             <td style="font-size: 18px;" id="menu_font_t"><%=m.created_at%></td>
             <td style="font-size: 18px;" id="menu_font_t"><%=m.content%></td>
             <td><a href="/message/read/<%=m.id%>" class="btn btn-primary btn-sm" style="text-align: center; font-size: 18px;" id="menu_font">쪽지보기</a></td>
